<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:id="@+id/icondesc"
        android:weightSum="26.5"
        >

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="@dimen/zero"
            android:layout_weight="0.5">
        </LinearLayout>

        <TextView
            style="@style/Icondescriptiontext"
            android:text="@string/downloads"
            android:gravity="center"
            android:layout_weight="6"/>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="@dimen/zero"
            android:layout_weight="0.5">
        </LinearLayout>

        <TextView
            style="@style/Icondescriptiontext"
            android:text="@string/amount"
            android:gravity="center"
            android:layout_weight="4.5"/>

        <ImageView
            android:id="@+id/icon5"
            android:layout_width="@dimen/zero"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:src="@drawable/ic_person"
             />

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="@dimen/zero"
            android:layout_weight="0.5">
        </LinearLayout>

        <TextView
            style="@style/Icondescriptiontext"
            android:textSize="11sp"
            android:text="@string/travel"
            android:gravity="center"
            android:layout_weight="6"/>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="@dimen/zero"
            android:layout_weight="0.5">
        </LinearLayout>

        <TextView
            style="@style/Icondescriptiontext"
            android:text="@string/similar"
            android:gravity="center"
            android:layout_weight="6"/>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="@dimen/zero"
            android:layout_weight="0.5">
        </LinearLayout>
    </LinearLayout>
