<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:id="@+id/newstext"
        android:gravity="center"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="27dp"
            >
            <ImageView
                android:layout_width="36dp"
                android:layout_height="30dp"
                android:background="@drawable/capture1"
                 />

            <TextView
                android:layout_width="350dp"
                android:layout_height="30dp"
                android:text="@string/whats_new"
                android:textSize="15sp"
                android:textColor="@color/greencollor"
                android:paddingTop="10dp"
                android:paddingLeft="12dp"
                android:background="@drawable/textshape"
                android:layout_marginLeft="36dp"
                />

        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text"
            android:textSize="15sp"
            android:textColor="@color/greencollor"
            android:paddingLeft="50dp"
            android:paddingRight="30dp"
            android:background="@drawable/textshape"
            android:id="@+id/text" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_watch"
            android:layout_marginTop="20dp"
            android:id="@+id/watch"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_more"
            android:textColor="@color/greencollor"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            />

    </LinearLayout>
